--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   	-moz-osx-font-smoothing: grayscale;
     
     font-size: 16px;
+
+    scroll-behavior: smooth !important;
+    overflow-x: hidden;
   }
 
   * {
